  * Added workaround for Nokia bug. Some Nokia software does not only
    encode the name space in the public ID. It also stores the name
    space in the root element as an attribute with an attribute name
    as literal reference zero but without a string table and the name
    space as an inline string.
    (Example: 04 00 03 string 00 => LITERAL index[0] STR_I string \0)
  * Every enum element has a fixed number.
  * Fixed SO-naming.

2011-01-20  Michael Bell <michael.bell@web.de>
  * Released 0.11.beta1
  * Changed the location of the header files including the installation
    path to support several versions of the library at the same host
  * Header files are installed to separate directory wbxml/
  * Reduced API (removed 14 header files from installation)
  * Removed unused parameter node from parse_cdata in wbxml_encoder.c.
    (ticket #43)
  * Fixed unused parameter warnings from expat callbacks.
    (ticket #47, #48 and #49)
  * Fixed wrong detection of WBXML language table list end.
    (ticket #44 and #45)
  * Added support for opaque tokens (e.g. byte arrays from Microsoft
    ActiveSync, code page Email2 ConversationId and ConversationIndex)
    (ticket #55). The original patch was supplied by Amnon Aaronsohn.
  * Added new parameter -c for character set specification to wbxml2xml
    (ticket #52)
  * Added support for setting the character set in the transport
    meta-information. This means that it is possible to set the
    character set via the interface. Please note that you cannot
    enforce a character set. (ticket #52)

2011-01-08  Michael Bell <michael.bell@web.de>
  * Released 0.10.9
  * Added correct default behaviour to parse_charset. If no character
    set is specified in a WBXML document then UTF-8 is assumed until
    there is another specification in the transport meta-information.
    (ticket #52)
  * Fixed integer overflow in opaque data parsing (ticket #54).
    The patch was supplied by Amnon Aaronsohn.