@@ -235,7 +235,7 @@ WBXML_DECLARE(WBXMLError) wbxml_conv_wbxml2xml_withlen(WB_UTINY  *wbxml,
                                                        WB_ULONG   wbxml_len,
                                                        WB_UTINY **xml,
                                                        WB_ULONG  *xml_len,
-                                                       WBXMLGenXMLParams *params);
+                                                       WBXMLGenXMLParams *params) LIBWBXML_DEPRECATED;
 
 /**
  * Wrapper around wbxml_conv_xml2wbxml_withlen()
@@ -261,7 +261,142 @@ WBXML_DECLARE(WBXMLError) wbxml_conv_xml2wbxml_withlen(WB_UTINY  *xml,
                                                        WB_ULONG   xml_len,
                                                        WB_UTINY **wbxml,
                                                        WB_ULONG  *wbxml_len,
-                                                       WBXMLGenWBXMLParams *params);
+                                                       WBXMLGenWBXMLParams *params) LIBWBXML_DEPRECATED;
+
+/**
+ * @description This is a container for the WBXML to XML conversion parameters.
+ *              An object style is used because it is much better expandable
+ *              in terms of downward binary compatibility.
+ */
+typedef struct WBXMLConvWBXML2XML_s WBXMLConvWBXML2XML;
+
+/**
+ * @brief Create a new WBXML to XML converter with the default configuration.
+ * @param conv [out] a reference to the pointer of the new converter
+ * @return WBXML_OK if conversion succeeded, an Error Code otherwise
+ */
+WBXML_DECLARE(WBXMLError) wbxml_create_conv_wbxml2xml(WBXMLConvWBXML2XML **conv);
+
+/**
+ * @brief Set the XML generation type (default: WBXML_GEN_XML_INDENT).
+ * @param conv     [in] the converter
+ * @param gen_type [in] generation type
+ */
+WBXML_DECLARE(void) wbxml_conv_wbxml2xml_set_gen_type(WBXMLConvWBXML2XML *conv, WBXMLGenXMLType gen_type);
+
+/**
+ * @brief Set the used WBXML language.
+ *        The language is usually detected by the specified public ID in the document.
+ *        If the public ID is set then it overrides the language.
+ * @param conv [in] the converter
+ * @param lang [in] language (e.g. SYNCML12)
+ */
+WBXML_DECLARE(void) wbxml_conv_wbxml2xml_set_language(WBXMLConvWBXML2XML *conv, WBXMLLanguage lang);
+
+/**
+ * @brief Set the used character set.
+ *        The default character set is UTF-8.
+ *        If the document specifies a character set by it own
+ *        then this character set overrides the parameter charset.
+ * @param conv    [in] the converter
+ * @param charset [in] the character set
+ */
+WBXML_DECLARE(void) wbxml_conv_wbxml2xml_set_charset(WBXMLConvWBXML2XML *conv, WBXMLCharsetMIBEnum charset);
+
+/**
+ * @brief Set the indent of the generated XML document (please see EXPAT default).
+ * @param conv   [in] the converter
+ * @param indent [in] the number of blanks
+ */
+WBXML_DECLARE(void) wbxml_conv_wbxml2xml_set_indent(WBXMLConvWBXML2XML *conv, WB_UTINY indent);
+
+/**
+ * @brief Enable whitespace preservation (default: FALSE).
+ * @param conv     [in] the converter
+ */
+WBXML_DECLARE(void) wbxml_conv_wbxml2xml_enable_preserve_whitespaces(WBXMLConvWBXML2XML *conv);
+
+/**
+ * @brief Convert WBXML to XML
+ * @param conv      [in] the converter
+ * @param wbxml     [in] WBXML Document to convert
+ * @param wbxml_len [in] Length of WBXML Document
+ * @param xml       [out] Resulting XML Document
+ * @param xml_len   [out] XML Document length
+ * @return WBXML_OK if conversion succeeded, an Error Code otherwise
+ */
+WBXML_DECLARE(WBXMLError) wbxml_run_conv_wbxml2xml(WBXMLConvWBXML2XML *conv,
+                                                   WB_UTINY  *xml,
+                                                   WB_ULONG   xml_len,
+                                                   WB_UTINY **wbxml,
+                                                   WB_ULONG  *wbxml_len);
+
+/**
+ * @brief Destroy the converter object.
+ * @param [in] the converter
+ */
+WBXML_DECLARE(void) wbxml_destroy_conv_wbxml2xml(WBXMLConvWBXML2XML *conv);
+
+/**
+ * @description This is a container for the XML to WBXML conversion parameters.
+ *              An object style is used because it is much better expandable
+ *              in terms of downward binary compatibility.
+ */
+typedef struct WBXMLConvXML2WBXML_s WBXMLConvXML2WBXML;
+
+/**
+ * @brief Create a new WBXML to XML converter with the default configuration.
+ * @param conv [out] a reference to the pointer of the new converter
+ * @return WBXML_OK if conversion succeeded, an Error Code otherwise
+ */
+WBXML_DECLARE(WBXMLError) wbxml_create_conv_xml2wbxml(WBXMLConvXML2WBXML **conv);
+
+/**
+ * @brief Set the WBXML version (default: 1.3).
+ * @param conv   [in] the converter
+ * @param indent [in] the number of blanks
+ */
+WBXML_DECLARE(void) wbxml_conv_xml2wbxml_set_version(WBXMLConvXML2WBXML *conv,
+                                                     WBXMLVersion wbxml_version);
+
+/**
+ * @brief Enable whitespace preservation (default: FALSE/DISABLED).
+ * @param conv     [in] the converter
+ */
+WBXML_DECLARE(void) wbxml_conv_xml2wbxml_enable_preserve_whitespaces(WBXMLConvXML2WBXML *conv);
+
+/**
+ * @brief Disable string table (default: TRUE/ENABLED).
+ * @param conv     [in] the converter
+ */
+WBXML_DECLARE(void) wbxml_conv_xml2wbxml_disable_string_table(WBXMLConvXML2WBXML *conv);
+
+/**
+ * @brief Disable public ID (default: TRUE/ENABLED).
+ * @param conv     [in] the converter
+ */
+WBXML_DECLARE(void) wbxml_conv_xml2wbxml_disable_public_id(WBXMLConvXML2WBXML *conv);
+
+/**
+ * @brief Convert XML to WBXML
+ * @param conv      [in] the converter
+ * @param xml       [in] XML Document to convert
+ * @param xml_len   [in] Length of XML Document
+ * @param wbxml     [out] Resulting WBXML Document
+ * @param wbxml_len [out] Length of resulting WBXML Document
+ * @return WBXML_OK if conversion succeeded, an Error Code otherwise
+ */
+WBXML_DECLARE(WBXMLError) wbxml_run_conv_xml2wbxml(WBXMLConvXML2WBXML *conv,
+                                                   WB_UTINY  *xml,
+                                                   WB_ULONG   xml_len,
+                                                   WB_UTINY **wbxml,
+                                                   WB_ULONG  *wbxml_len);
+
+/**
+ * @brief Destroy the converter object.
+ * @param [in] the converter
+ */
+WBXML_DECLARE(void) wbxml_destroy_conv_xml2wbxml(WBXMLConvXML2WBXML *conv);
 
 /** @} */
 
